k8s/applications/dev/phpmyadmin/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: phpmyadmin
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
