k8s/applications/dev/phpmyadmin/HTTPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: phpmyadmin
  namespace: phpmyadmin
spec:
  parentRefs:
    - {namespace: gateway, name: internal, sectionName: https-wc-karlsen-app}
  hostnames:
    - pma.karlsen.app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: phpmyadmin
          port: 80
